--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@ineo6/github-dark-theme": "^1.1.0",
     "dark-theme-github": "github:remorses/dark-github-theme",
     "gatsby": "^4.5.4",
     "gatsby-plugin-feed": "^4.4.0",
@@ -31,7 +32,7 @@
     "gatsby-remark-copy-linked-files": "^5.4.0",
     "gatsby-remark-images": "^6.4.0",
     "gatsby-remark-katex": "^6.23.0",
-    "gatsby-remark-vscode": "^3.3.0",
+    "gatsby-remark-vscode": "^3.3.1",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-transformer-remark": "^5.23.1",
     "gatsby-transformer-sharp": "^4.4.0",
