--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "deploy": "git add . && git commit -m 'deploy' && git push"
     },
     "dependencies": {
+        "@giscus/react": "^3.0.0",
         "classnames": "^2.5.1",
         "date-fns": "^3.3.1",
         "gray-matter": "^4.0.3",
