24-07-09 JSON_LD 추가

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,7 @@
 GA_TRACKING_ID=G-4S0WKJ5B7B
 GOOGLE_VERIFICATION=cGIJ_4UB82a6wkT0s71AkXfCqej5-Svsic6s2N0YrLk
 NAVER_VERIFICATION=c3fffb88d53634045cbfe175cb5ecc04afea1ea
-NEXT_PUBLIC_URL=https://yangoos57.github.io/
+
+NEXT_PUBLIC_PAGE_TITLE="데이터를 종합해 정보를 만듭니다."
+NEXT_PUBLIC_URL=https://yangoos57.github.io
+NEXT_PUBLIC_AUTHOR=yangoos
