--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
         "@giscus/react": "^3.0.0",
         "classnames": "^2.5.1",
         "date-fns": "^3.3.1",
+        "embla-carousel-autoplay": "^8.1.8",
+        "embla-carousel-fade": "^8.1.8",
+        "embla-carousel-react": "^8.1.8",
         "gray-matter": "^4.0.3",
         "medium-zoom": "^1.1.0",
         "next": "14.1.0",
